--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>>Mahi tour pakages and car rental services</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="F1.css">
+    <link rel="stylesheet" href="css/F1.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="img/Sunset-Jaisalmer" width="100%" height="550px" alt="">
+                <img class="img-chc" src="img/Sunset-Jaisalmer.png" width="100%" height="550px" alt="">
             <div class="sec-chc">
                 <div class="chc">
                     <h1>CONTACT</h1>
