--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="F1.css">
+    <link rel="stylesheet" href="css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -29,7 +29,7 @@
         </div>
         <div class="col-1"></div>
         <div class="col-3 linksocial" >
-          <a href=""><i class="fa fa-facebook-square"></i></a>
+          <a href="https://www.facebook.com/people/Mahi-tour-and-travels/100064370760742/?mibextid=ZbWKwL"><i class="fa fa-facebook-square"></i></a>
           <a href=""><i class="fa fa-instagram"></i></a>
           <a href=""><i class="fa fa-twitter"></i></a>
         </div>
@@ -66,7 +66,7 @@
                 Rajasthan Together
             </h1>
             <div class="bgimage-btn">
-            <button type="submit" class="button2" >Book Now</button>
+            <button type="submit" class="button2" ><a class="bt-n" href="Contact.html"> Book Now</a></button>
             </div>
         </div>
     </div>
@@ -115,26 +115,26 @@
     <center><h1>Our Fleets</h1></center>
 </div>
 <div class="container-fleets">
-    <div class="item">
+    <div class="item vehi">
         <img src="img/Tempo-traveller.png" alt="" >
         <div class="tempo">
             Tempo traveller
         </div>
-        <button type="submit" class="button-a">Book Now</button>
+        <button type="submit" class="button-a"><a class="bt-n" href="Contact.html"> Book Now</a></button>
     </div>
-    <div class="item-1">
+    <div class="item-1 vehi">
         <img src="img/Bus.png" alt="" >
-        <div class="Bus">
+        <div class="tempo">
             Bus
         </div>
-        <button type="submit" class="button-a">Book Now</button>
+        <button type="submit" class="button-a"><a class="bt-n" href="Contact.html"> Book Now</a></button>
     </div>
-    <div class="item-2">
+    <div class="item-2 vehi">
         <img src="img/Luxury-car.png" alt="" >
         <div class="tempo">
            Luxury car
         </div>
-        <button type="submit" class="button-a">Book Now</button>
+        <button type="submit" class="button-a"><a class="bt-n" href="Contact.html"> Book Now</a></button>
     </div>
 </div>
 </section> 
@@ -148,46 +148,58 @@
     </div>
     <div class="container-fleets">
         <div class="item-11">
+           <a href="Uttrakhand/Uttarakhand.html">
             <div class="img-raj">
-            <img class="raj-img" src="img/Rajasthan.webp" height="250px" width="350px" alt="">
-            <div class="Rajasthan">
-                Rajasthan
+                <img class="raj-img" src="img/Uttarakhand.webp" height="250px" width="350px" alt="">
+                <div class="Uttrakhand">
+                    Uttrakhand
+                </div>
             </div>
-        </div>
+           </a>
         </div>
         <div class="item-12">
-            <img class="raj-img" src="img/Himachal.webp" height="250px" width="350px" alt="">
+            <a href="Rajasthan/Rajasthan.html">
+                <img class="raj-img" src="img/Rajasthan.webp" height="250px" width="350px" alt="">
+            <div class="Rajasthan">
+                 Rajasthan
+            </div>
+            </a>
+        </div>
+        <div class="item-13">
+           <a href="Himachal/Himachal.html">
+            <img class="raj-img" src="img/Himachal.webp"  height="250px" width="350px" alt="">
             <div class="Himachal">
                 Himachal Pradesh
             </div>
-        </div>
-        <div class="item-13">
-            <img class="raj-img" src="img/Uttarakhand.webp"  height="250px" width="350px" alt="">
-            <div class="Uttrakhand">
-                Uttrakhand
-            </div>
+           </a>
         </div>
         <div class="item-14">
-            <img class="raj-img" src="img/chardham1.png" alt="" height="250px" width="350px">
+            <a href="Chardham/Chardham.html">
+                <img class="raj-img" src="img/chardham1.png" alt="" height="250px" width="350px">
             <div class="Char-Dham">
                 Char Dham
             </div>
+            </a>
         </div>
         <div class="item-15">
-            <img class="raj-img" src="img/Golden" alt="" height="250px" width="350px">
+            <a href="Golden/Golden.html">
+                <img class="raj-img" src="img/Golden" alt="" height="250px" width="350px">
             <div class="Golden">
                 Golden Triangle
             </div>
+            </a>
         </div>
         <div class="item-16">
-            <img class="raj-img" src="img/Kashmir" alt="" height="250px" width="350px">
+            <a href="Kashmir/Kashmir.html">
+                <img class="raj-img" src="img/Kashmir" alt="" height="250px" width="350px">
             <div class="Kashmir">
                 Kashmir
             </div>
+            </a>
         </div>
     </div>
     <div class="button-bc">
-    <button class="button-b" type="submit">View More</button>
+    <button class="button-b" type="submit"><a class="bt-n" href="Packages.html"> View More</a></button>
 </div>
 </section>
 <!-- About -->
@@ -222,7 +234,7 @@
         </div>
         <div class="button-bc">
             <button class="button-c" type="submit">
-                View More
+                <a class="bt-n" href="About.html"> View More</a>
             </button>
         </div>
         </div>
