--- a/Rajasthan/Jaipur-city.html
+++ b/Rajasthan/Jaipur-city.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogesh Mahi Tour packages and car rental services</title>
 
-    <link rel="shortcut icon" href="img/Luxury-car.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/F1.css">
+    <link rel="stylesheet" href="/css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -46,12 +46,12 @@
         <div class="col-1"></div>
         <div class="col-6">
             <ul class="menu-ul" >
-                <li> <a href="Home.html">Home</a></li>
-                <li><a href="About.html">About</li>
-                <li><a href="packages.html" class="active">Tour Packages</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li><a href="Rental.html">Rental/Hire</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li> <a href="/Home.html">Home</a></li>
+                <li><a href="/About.html">About</li>
+                <li><a href="/packages.html" class="active">Tour Packages</a></li>
+                <li><a href="/Gallery.html">Gallery</a></li>
+                <li><a href="/Rental.html">Rental/Hire</a></li>
+                <li><a href="/Contact.html">Contact</a></li>
             </ul>
            </div></div>
         </div>
@@ -59,15 +59,15 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="img/pkj-1.png" width="100%" height="550px" alt="">
+                <img class="img-chc" src="/img/pkj-1.png" width="100%" height="460px" alt="">
             <div class="sec-chc">
                 <div class="chc">
-                    <h1 class="pkj-p">PACKAGES</h1>
+                    <h1 class="jct">JAIPUR CITY TOUR</h1>
                 </div>
                 <div class="chc-h">
-                    <div class="div"><a href="Home.html">HOME</a></div>
+                    <div class="div"><a href="/Home.html">HOME</a></div>
                     <div class="div"><i class="fa fa-angle-double-right"></i></div>
-                    <div class="div"><p>PACKAGES</p></div>
+                    <div class="div"><p>JAIPUR CITY TOUR</p></div>
                 </div>
             </div>  
             </div>
@@ -109,71 +109,60 @@
         </section>
         <section>
             <div class="dest">
-               <center><h3>DESTINATION</h3></center>
+               <center><h3>PACKAGES</h3></center>
             </div>
             <div class="explore">
-                <center><h1>Explore Top Destination</h1></center>
+                <center><h1>JAIPUR CITY TOUR</h1></center>
             </div>
-            <div class="container-fleets">
-                <div class="item-11">
-                    <div class="img-raj">
-                    <a href="Uttrakhand/Uttarakhand.html">
-                        <img class="raj-img" src="img/Uttarakhand.webp" height="250px" width="350px" alt="">
-                    <div class="Uttrakhand">
-                        Uttrakhand
-                    </div>
-                </a>
-                </div>
-                </div>
-                <div class="item-12">
-                   <a href="Rajasthan/Rajasthan.html">
-                    <img class="raj-img" src="img/Rajasthan.webp" height="250px" width="350px" alt="">
-                    <div class="Rajasthan">
-                        Rajasthan
-                    </div>
-                   </a>
-                </div>
-                <div class="item-13">
-                    <a href="Himachal/Himachal.html">
-                        <img class="raj-img" src="img/Himachal.webp"  height="250px" width="350px" alt="">
-                    <div class="Himachal">
-                        Himachal Pradesh
-                    </div>
-                    </a>
-                </div>
-                <div class="item-14">
-                   <a href="Chardham/Chardham.html">
-                    <img class="raj-img" src="img/chardham1.png" alt="" height="250px" width="350px">
-                    <div class="Char-Dham">
-                        Char Dham
-                    </div>
-                   </a>
-                </div>
-                <div class="item-15">
-                    <a href="Golden/Golden.html">
-                        <img class="raj-img" src="img/Golden" alt="" height="250px" width="350px">
-                    <div class="Golden">
-                        Golden Triangle
-                    </div>
-                    </a>
-                </div>
-                <div class="item-16">
-                    <a href="Kashmir/Kashmir.html">
-                        <img class="raj-img" src="img/Kashmir" alt="" height="250px" width="350px">
-                    <div class="Kashmir">
-                        Kashmir
-                    </div>
-                    </a>
-                </div>
-                <div class="item-17">
-                   <a href="Kerala/Kerala.html">
-                    <img class="raj-img" src="img/KERALA.jpg" alt="" height="250px" width="350px">
-                    <div class="Kerala">
-                        Kerala
-                    </div>
-                   </a>
-                </div>
+            <div class="explore-p">
+            <center><p><i class="fa fa-calendar"></i><span> 3 days</span></p></center>
             </div>
+            <div class="crdjaipur">
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                <div class="crd-jct-h3">
+                    <a href="">
+                        <h3> Day 01 : Jaipur (Arrival) </h3>
+                    </a>
+                </div>
+                  <div class="crd-jct-p">
+                    <p>
+                        Pickup from Jaipur Airport, transfer to Hotel. Later after fresh-up enjoy Jaipur City Tour visit Jalmahal, Step well of Amer, Meera Temple & Amer fort. Later enjoy Light & Sound show of Amer fort & back to hotel for overnight halt.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 02 : Jaipur </h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        <p>
+                            Today visit Birla Temple, Albert Hall, Hawa Mahal, City Palace, Jantar Mantar evening visit Patrika Gate & enjoy dinner with folk dance & Music in Chokhi Dhani resort. Later back to hotel for overnight halt.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 03 : Jaipur (Drop)</h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        Today morning after breakfast & Checkout visit Jaigarh Fort, Nahargarh fort & enjoy Leopard Safari in Jaipur. Evening drop at Jaipur Airport. 
+                    </div>
+                   
+                </div>
+                <div class="col-1"></div>
+            </div>
+        </div>
+        <button type="submit" class="button-jct"><a class="jct-btn" href="/Contact.html"> Enquiry Now</a></button>
+    </div>
         </section>
         <footer>
             <div class="footer">
@@ -206,10 +195,10 @@
                         <h3>Our Services</h3>
                     </div>
                     <ul class="f-ul-1">
-                        <li><i class="fa fa-angle-right"></i><a href="">About</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Gallery</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Packages</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Rentl/Hire</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/About.html">About</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Gallery.html">Gallery</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Packages.html">Packages</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Rental.html">Rentl/Hire</a></li>
                     </ul>
                     </div>
                 </div>
