--- a/About.html
+++ b/About.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="F1.css">
+    <link rel="stylesheet" href="css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -59,7 +59,7 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="img/abt.webp" width="100%" height="550px" alt="">
+                <img class="img-chc" src="img/abt-1.png" width="100%" height="550px" alt="">
             <div class="sec-chc">
                 <div class="chc">
                     <h1 class="abt-1">ABOUT</h1>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="button-bc">
                     <button class="button-c" type="submit">
-                        View More
+                        <a class="bt-n" href="Contact.html"> Book Now</a>
                     </button>
                 </div>
                 </div>
