--- a/Chardham/Kedarnath.html
+++ b/Chardham/Kedarnath.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogesh Mahi Tour packages and car rental services</title>
 
-    <link rel="shortcut icon" href="img/Luxury-car.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/F1.css">
+    <link rel="stylesheet" href="/css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -46,12 +46,12 @@
         <div class="col-1"></div>
         <div class="col-6">
             <ul class="menu-ul" >
-                <li> <a href="Home.html">Home</a></li>
-                <li><a href="About.html">About</li>
-                <li><a href="packages.html" class="active">Tour Packages</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li><a href="Rental.html">Rental/Hire</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li> <a href="/Home.html">Home</a></li>
+                <li><a href="/About.html">About</li>
+                <li><a href="/packages.html" class="active">Tour Packages</a></li>
+                <li><a href="/Gallery.html">Gallery</a></li>
+                <li><a href="/Rental.html">Rental/Hire</a></li>
+                <li><a href="/Contact.html">Contact</a></li>
             </ul>
            </div></div>
         </div>
@@ -59,15 +59,15 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="img/pkj-1.png" width="100%" height="550px" alt="">
+                <img class="img-chc" src="/img/pkj-1.png" width="100%" height="460px" alt="">
             <div class="sec-chc">
                 <div class="chc">
-                    <h1 class="pkj-p">PACKAGES</h1>
+                    <h1 class="urt">KEDARNATH TOUR PACKAGE</h1>
                 </div>
-                <div class="chc-h">
-                    <div class="div"><a href="Home.html">HOME</a></div>
+                <div class="chc-h2">
+                    <div class="div"><a href="/Home.html">HOME</a></div>
                     <div class="div"><i class="fa fa-angle-double-right"></i></div>
-                    <div class="div"><p>PACKAGES</p></div>
+                    <div class="div"><p>KEDARNATH TOUR PACKAGE</p></div>
                 </div>
             </div>  
             </div>
@@ -109,71 +109,59 @@
         </section>
         <section>
             <div class="dest">
-               <center><h3>DESTINATION</h3></center>
+               <center><h3>PACKAGES</h3></center>
             </div>
             <div class="explore">
-                <center><h1>Explore Top Destination</h1></center>
+                <center><h1>Kedarnath Tour Package</h1></center>
             </div>
-            <div class="container-fleets">
-                <div class="item-11">
-                    <div class="img-raj">
-                    <a href="Uttrakhand/Uttarakhand.html">
-                        <img class="raj-img" src="img/Uttarakhand.webp" height="250px" width="350px" alt="">
-                    <div class="Uttrakhand">
-                        Uttrakhand
-                    </div>
-                </a>
-                </div>
-                </div>
-                <div class="item-12">
-                   <a href="Rajasthan/Rajasthan.html">
-                    <img class="raj-img" src="img/Rajasthan.webp" height="250px" width="350px" alt="">
-                    <div class="Rajasthan">
-                        Rajasthan
-                    </div>
-                   </a>
-                </div>
-                <div class="item-13">
-                    <a href="Himachal/Himachal.html">
-                        <img class="raj-img" src="img/Himachal.webp"  height="250px" width="350px" alt="">
-                    <div class="Himachal">
-                        Himachal Pradesh
-                    </div>
-                    </a>
-                </div>
-                <div class="item-14">
-                   <a href="Chardham/Chardham.html">
-                    <img class="raj-img" src="img/chardham1.png" alt="" height="250px" width="350px">
-                    <div class="Char-Dham">
-                        Char Dham
-                    </div>
-                   </a>
-                </div>
-                <div class="item-15">
-                    <a href="Golden/Golden.html">
-                        <img class="raj-img" src="img/Golden" alt="" height="250px" width="350px">
-                    <div class="Golden">
-                        Golden Triangle
-                    </div>
-                    </a>
-                </div>
-                <div class="item-16">
-                    <a href="Kashmir/Kashmir.html">
-                        <img class="raj-img" src="img/Kashmir" alt="" height="250px" width="350px">
-                    <div class="Kashmir">
-                        Kashmir
-                    </div>
-                    </a>
-                </div>
-                <div class="item-17">
-                   <a href="Kerala/Kerala.html">
-                    <img class="raj-img" src="img/KERALA.jpg" alt="" height="250px" width="350px">
-                    <div class="Kerala">
-                        Kerala
-                    </div>
-                   </a>
-                </div>
+            <div class="explore-p">
+            <center><p><i class="fa fa-calendar"></i><span> 3 days / 2 Nights</span></p></center>
             </div>
+            <div class="crdjaipur">
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                <div class="crd-jct-h3">
+                    <a href="">
+                        <h3> Day 01 : Jaipur– Guptkashi</h3>
+                    </a>
+                </div>
+                  <div class="crd-jct-p">
+                    <p>
+                        Pick up from Jaipur Railway Station/Prescheduled destination and proceed to Guptkashi (It’s situated at a distance of 47 km from the holy shrine, Kedarnath) The town holds immense religious importance as it houses famous ancient temples like Vishwanath Temple and Ardhnareshwar Temple. Have your dinner and stay overnight in the hotel/camp.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 02 : Guptkashi – Kedarnath - Guptkashi </h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        <p>
+                            Early morning drive to Sonprayag till Transport Parking. You have to take local vehicle/jeep to reach at Gaurikund (02 kms) at own cost. After reaching at Gaurikund, you can start trekking for Kedarnath (19 Kms one way). Those who want to hire Pony/Palki at own cost (Approximate Cost suggested for Pony for return journey- Poni Rs 2500/-, Palki 10000/- while those who are going by Helicopter which cost is approx Rupees 9000/- will be drop at Guptkashi/Phata/Sirsi Helipad will take dropping accordingly. Note: Please book your Helicopter/Poni/Palki with same day returning while start early morning 4:00 AM those who are going by Trekking/Pony/Palki. Upon arrival, visit Kedarnath Temple, after performing pooja again start trekking to return back to Sonprayag on right time and co-ordinate with driver who will waiting for you in Sonprayag/Phata/Sirsi on your respective time. Later back to hotel Have Dinner and Overnight Stay at Guptkashi.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 03 : Guptkashi - Rishikesh - Jaipur</h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        Early morning, after breakfast, you drive downhill to Jaipur via Rishikesh a spiritual city and the Yoga capital of the world. Upon arrival Rishikesh visit Ram Jhula and Laxman Jhula, Muni Ki Reti. Later drive to Jaipur (25 Kms). Upon arrival drop at Jaipur Railway Station. Tour Concludes.
+                    </div>
+                </div>
+                <div class="col-1"></div>
+            </div>
+        </div>
+        <button type="submit" class="button-jct"><a class="jct-btn" href="/Contact.html"> Enquiry Now</a></button>
+    </div>
         </section>
         <footer>
             <div class="footer">
@@ -206,10 +194,10 @@
                         <h3>Our Services</h3>
                     </div>
                     <ul class="f-ul-1">
-                        <li><i class="fa fa-angle-right"></i><a href="">About</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Gallery</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Packages</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Rentl/Hire</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/About.html">About</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Gallery.html">Gallery</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Packages.html">Packages</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Rental.html">Rentl/Hire</a></li>
                     </ul>
                     </div>
                 </div>
