--- a/Himachal/Manali-g.html
+++ b/Himachal/Manali-g.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogesh Mahi Tour packages and car rental services</title>
 
-    <link rel="shortcut icon" href="img/Luxury-car.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/F1.css">
+    <link rel="stylesheet" href="/css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -46,12 +46,12 @@
         <div class="col-1"></div>
         <div class="col-6">
             <ul class="menu-ul" >
-                <li> <a href="Home.html">Home</a></li>
-                <li><a href="About.html">About</li>
-                <li><a href="packages.html" class="active">Tour Packages</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li><a href="Rental.html">Rental/Hire</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li> <a href="/Home.html">Home</a></li>
+                <li><a href="/About.html">About</li>
+                <li><a href="/packages.html" class="active">Tour Packages</a></li>
+                <li><a href="/Gallery.html">Gallery</a></li>
+                <li><a href="/Rental.html">Rental/Hire</a></li>
+                <li><a href="/Contact.html">Contact</a></li>
             </ul>
            </div></div>
         </div>
@@ -59,15 +59,15 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="img/pkj-1.png" width="100%" height="550px" alt="">
+                <img class="img-chc" src="/img/pkj-1.png" width="100%" height="460px" alt="">
             <div class="sec-chc">
                 <div class="chc">
-                    <h1 class="pkj-p">PACKAGES</h1>
+                    <h1 class="mgt">MANALI GROUP TOUR</h1>
                 </div>
                 <div class="chc-h">
-                    <div class="div"><a href="Home.html">HOME</a></div>
+                    <div class="div"><a href="/Home.html">HOME</a></div>
                     <div class="div"><i class="fa fa-angle-double-right"></i></div>
-                    <div class="div"><p>PACKAGES</p></div>
+                    <div class="div"><p>MANALI GROUP TOUR</p></div>
                 </div>
             </div>  
             </div>
@@ -109,71 +109,60 @@
         </section>
         <section>
             <div class="dest">
-               <center><h3>DESTINATION</h3></center>
+               <center><h3>PACKAGES</h3></center>
             </div>
             <div class="explore">
-                <center><h1>Explore Top Destination</h1></center>
+                <center><h1>Manali Group Tour</h1></center>
             </div>
-            <div class="container-fleets">
-                <div class="item-11">
-                    <div class="img-raj">
-                    <a href="Uttrakhand/Uttarakhand.html">
-                        <img class="raj-img" src="img/Uttarakhand.webp" height="250px" width="350px" alt="">
-                    <div class="Uttrakhand">
-                        Uttrakhand
-                    </div>
-                </a>
-                </div>
-                </div>
-                <div class="item-12">
-                   <a href="Rajasthan/Rajasthan.html">
-                    <img class="raj-img" src="img/Rajasthan.webp" height="250px" width="350px" alt="">
-                    <div class="Rajasthan">
-                        Rajasthan
-                    </div>
-                   </a>
-                </div>
-                <div class="item-13">
-                    <a href="Himachal/Himachal.html">
-                        <img class="raj-img" src="img/Himachal.webp"  height="250px" width="350px" alt="">
-                    <div class="Himachal">
-                        Himachal Pradesh
-                    </div>
-                    </a>
-                </div>
-                <div class="item-14">
-                   <a href="Chardham/Chardham.html">
-                    <img class="raj-img" src="img/chardham1.png" alt="" height="250px" width="350px">
-                    <div class="Char-Dham">
-                        Char Dham
-                    </div>
-                   </a>
-                </div>
-                <div class="item-15">
-                    <a href="Golden/Golden.html">
-                        <img class="raj-img" src="img/Golden" alt="" height="250px" width="350px">
-                    <div class="Golden">
-                        Golden Triangle
-                    </div>
-                    </a>
-                </div>
-                <div class="item-16">
-                    <a href="Kashmir/Kashmir.html">
-                        <img class="raj-img" src="img/Kashmir" alt="" height="250px" width="350px">
-                    <div class="Kashmir">
-                        Kashmir
-                    </div>
-                    </a>
-                </div>
-                <div class="item-17">
-                   <a href="Kerala/Kerala.html">
-                    <img class="raj-img" src="img/KERALA.jpg" alt="" height="250px" width="350px">
-                    <div class="Kerala">
-                        Kerala
-                    </div>
-                   </a>
-                </div>
+            <div class="explore-p">
+            <center><p><i class="fa fa-calendar"></i><span> 3 days / 2 Nights</span></p></center>
             </div>
+            <div class="crdjaipur">
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                <div class="crd-jct-h3">
+                    <a href="">
+                        <h3> Day 01 : Pickup From Delhi To Manali ( Overnight Journey ) </h3>
+                    </a>
+                </div>
+                  <div class="crd-jct-p">
+                    <p>
+                        Pickup from Delhi and Drive to Manali Reach Manali Check in the hotel and some leisure Get ready for .Manali Local Sightseeing Manali HADIMBA TEMPLE Built in 1553 with a superbly crafted four tiered pagoda roof, it is famous for its exquisitely carved doorway .CLUB HOUSE The Club House with its comprehensive facilities that include a roller skating rink, an auditorium, billiards rooms, a library, a bar and restaurant makes wonderful outing for the day. Tibetan Monastery, Van Vihar, and VASHIST Well known for its hot springs. There are old temples dedicated to the sage Vashisth and to Lord Rama. Overnight stay in hotel at Manali.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 02 : Head to Solang Valley and slide over the Rohtang Pass Top Slopes </h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        <p>
+                            After breakfast at the hotel and later get ready for an excursion to visit Solang Valley / Rohtang Pass is outstandingly beautiful and is an ideal spot to view the majestic snow covered Himalayas, serene natural surrounding, pristine lake and fairy white snow round the year.Overnight stay in hotel at Manali. Note: Rohtang pass visit is fully depend up on the availability of online permit and NGT, Himachal Government rules. We are not liable if the traveler is not able to visit Rohtang pass because of any mentioned reasons. (At own Cost)
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 03 : Manali (Visit to kullu) and Move to Delhi</h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        After breakfast, ready to visit on the way Manali Keep your cameras ready, there are many scenic spots as you pass by Kullu Valley, Beas River, DashehraMaidan.than evening return back to hotel take dinner overnight stay in hotel. About KulluKullu (1220m) was once known as Kulanthapitha - the end of the habitable world. Beyond rose the forbidding heights of the Greater Himalaya and by the banks of the shining river Beas lay the fabled Silver Valley. Kullu got its first memorable access only after independence. The long centuries of seclusion have however allowed the area to retain considerable measures of its traditional charm. Here is the core of an intricate web of numerous valleys, each of which is a visual delight and seems more beautiful than the other. The Silver Valley has nature's treasures that lie carelessly scattered as flowers. This wealth nestles by every tree in the splendid forests, bursts forth in the blooms and in the fruit of every orchard. Here are riches which cannot be measured and echo down the ages with the words of every myth and ancient legend and glow in the warm smiles of its gentle people. There is pleasure in every step you take in these enchanted valleys and in every gurgle you hear in the clear mountain streams visit to local market than Proceed to Delhi, Arrive Delhi and transfer to onward destination railway station or airport. 
+                    </div>
+                   
+                </div>
+                <div class="col-1"></div>
+            </div>
+        </div>
+        <button type="submit" class="button-jct"><a class="jct-btn" href="/Contact.html"> Enquiry Now</a></button>
+    </div>
         </section>
         <footer>
             <div class="footer">
@@ -206,10 +195,10 @@
                         <h3>Our Services</h3>
                     </div>
                     <ul class="f-ul-1">
-                        <li><i class="fa fa-angle-right"></i><a href="">About</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Gallery</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Packages</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Rentl/Hire</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/About.html">About</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Gallery.html">Gallery</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Packages.html">Packages</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Rental.html">Rentl/Hire</a></li>
                     </ul>
                     </div>
                 </div>
