--- a/Kashmir/Experience-Kashmir.html
+++ b/Kashmir/Experience-Kashmir.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogesh Mahi Tour packages and car rental services</title>
 
-    <link rel="shortcut icon" href="img/Luxury-car.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/F1.css">
+    <link rel="stylesheet" href="/css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -46,12 +46,12 @@
         <div class="col-1"></div>
         <div class="col-6">
             <ul class="menu-ul" >
-                <li> <a href="Home.html">Home</a></li>
-                <li><a href="About.html">About</li>
-                <li><a href="packages.html" class="active">Tour Packages</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li><a href="Rental.html">Rental/Hire</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li> <a href="/Home.html">Home</a></li>
+                <li><a href="/About.html">About</li>
+                <li><a href="/packages.html" class="active">Tour Packages</a></li>
+                <li><a href="/Gallery.html">Gallery</a></li>
+                <li><a href="/Rental.html">Rental/Hire</a></li>
+                <li><a href="/Contact.html">Contact</a></li>
             </ul>
            </div></div>
         </div>
@@ -59,15 +59,15 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="img/pkj-1.png" width="100%" height="550px" alt="">
+                <img class="img-chc" src="/img/pkj-1.png" width="100%" height="460px" alt="">
             <div class="sec-chc">
                 <div class="chc">
-                    <h1 class="pkj-p">PACKAGES</h1>
+                    <h1 class="rhtp">EXPERIENCE KASHMIR- A FAMILY GETAWAY</h1>
                 </div>
-                <div class="chc-h">
-                    <div class="div"><a href="Home.html">HOME</a></div>
+                <div class="chc-h2">
+                    <div class="div"><a href="/Home.html">HOME</a></div>
                     <div class="div"><i class="fa fa-angle-double-right"></i></div>
-                    <div class="div"><p>PACKAGES</p></div>
+                    <div class="div"><p>EXPERIENCE KASHMIR- A FAMILY GETAWAY</p></div>
                 </div>
             </div>  
             </div>
@@ -109,71 +109,84 @@
         </section>
         <section>
             <div class="dest">
-               <center><h3>DESTINATION</h3></center>
+               <center><h3>PACKAGES</h3></center>
             </div>
             <div class="explore">
-                <center><h1>Explore Top Destination</h1></center>
+                <center><h1>Experience Kashmir- A Family Getaway</h1></center>
             </div>
-            <div class="container-fleets">
-                <div class="item-11">
-                    <div class="img-raj">
-                    <a href="Uttrakhand/Uttarakhand.html">
-                        <img class="raj-img" src="img/Uttarakhand.webp" height="250px" width="350px" alt="">
-                    <div class="Uttrakhand">
-                        Uttrakhand
-                    </div>
-                </a>
-                </div>
-                </div>
-                <div class="item-12">
-                   <a href="Rajasthan/Rajasthan.html">
-                    <img class="raj-img" src="img/Rajasthan.webp" height="250px" width="350px" alt="">
-                    <div class="Rajasthan">
-                        Rajasthan
-                    </div>
-                   </a>
-                </div>
-                <div class="item-13">
-                    <a href="Himachal/Himachal.html">
-                        <img class="raj-img" src="img/Himachal.webp"  height="250px" width="350px" alt="">
-                    <div class="Himachal">
-                        Himachal Pradesh
-                    </div>
-                    </a>
-                </div>
-                <div class="item-14">
-                   <a href="Chardham/Chardham.html">
-                    <img class="raj-img" src="img/chardham1.png" alt="" height="250px" width="350px">
-                    <div class="Char-Dham">
-                        Char Dham
-                    </div>
-                   </a>
-                </div>
-                <div class="item-15">
-                    <a href="Golden/Golden.html">
-                        <img class="raj-img" src="img/Golden" alt="" height="250px" width="350px">
-                    <div class="Golden">
-                        Golden Triangle
-                    </div>
-                    </a>
-                </div>
-                <div class="item-16">
-                    <a href="Kashmir/Kashmir.html">
-                        <img class="raj-img" src="img/Kashmir" alt="" height="250px" width="350px">
-                    <div class="Kashmir">
-                        Kashmir
-                    </div>
-                    </a>
-                </div>
-                <div class="item-17">
-                   <a href="Kerala/Kerala.html">
-                    <img class="raj-img" src="img/KERALA.jpg" alt="" height="250px" width="350px">
-                    <div class="Kerala">
-                        Kerala
-                    </div>
-                   </a>
-                </div>
+            <div class="explore-p">
+            <center><p><i class="fa fa-calendar"></i><span> 5 days / 4 Nights</span></p></center>
             </div>
+            <div class="crdjaipur">
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                <div class="crd-jct-h3">
+                    <a href="">
+                        <h3> Day 01 : Arrival at Kashmir</h3>
+                    </a>
+                </div>
+                  <div class="crd-jct-p">
+                    <p>
+                        Meet and greet the representative at the pre-decided location in Kashmir. Get transferred to your hotel where you can check in and relax for some time. You will then be visiting the marvellous Mughal creations starting with the Chashmi-E-Shahi which is a natural water spring. Stroll around the famous landscapes created by the Mughals and watch the sunset over the Dal Lake as you embark on your Shikara Ride on its rolling waters. Return back for a delicious dinner at the hotel. Overnight stay at the hotel in Kashmir.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 02 : Kashmir to Pahalgam </h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        <p>
+                            After waking up early in the morning, have some delicious breakfast. Get ready for a scenic drive to Pahalgam which is also the starting point for Amarnath Yatra. Transfer to Pahalgam and Check into the hotel and start your day tour. Pahalgam with its lovely meadows, gurgling streams, apple orchards and a variety of trees, from pine to deodar, resembles a marvellous portrait. This beautiful valley also houses a number of trekking trails, camping sites and river rafting in the gushing Lidder river. Return back to the hotel for dinner Overnight stay in Pahalgam.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 03 : Pahalgam to Kashmir and Sightseeing in Kashmir</h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        After having a filling breakfast, drive back to Jaipur to visit the famous Mughal Gardens including the Nishat Bagh (the garden of Pleasure) and the Shalimar Bagh (abode of love). These gardens are situated on the banks of Dal lake. Nishat Bagh is the larger of the two gardens and has an impressive plantation of Chinar trees on its highest terrace. You will also visit the Shankaracharya Temple and Hazratbal Shrine. In the evening, you can go on a shopping spree at the busting Lal Chowk where you can buy leather goods, embroidered mats and carpets, antique jewellery and the highly demanded Pashmina shawls. Return back to the hotel for an overnight stay in Kashmir.
+                    </div>
+                   
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 04 : Excursion to Gulmarg</h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        After having a sumptuous breakfast, check out from the hotel and head towards the crown jewel of Kashmir - Gulmarg. Reach Gulmarg, meaning The Meadow of Flowers, which is also a very popular Ski Resort. See the breathtaking views of the Kashmir Valley and the snowy peaks around as you take a ride on the 2nd Highest Gondola in the world. Later you can try sliding down the slopes, by trying a hand at Skiing and Snow Boarding. Head back to Kashmir where you can check in to a houseboat. Have a delicious dinner and an overnight stay aboard the houseboat in Kashmir.
+                    </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 05 : Departure</h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        After having a hearty breakfast, pack your bags and a bundle of memories from paradise. Complete the Check out formalities at the hotel. Conclude the tour with beautiful memories on reaching your desired destination in Kashmir.
+                    </div>
+                </div>
+                <div class="col-1"></div>
+            </div>
+        </div>
+        <button type="submit" class="button-jct"><a class="jct-btn" href="/Contact.html"> Enquiry Now</a></button>
+    </div>
         </section>
         <footer>
             <div class="footer">
@@ -206,10 +219,10 @@
                         <h3>Our Services</h3>
                     </div>
                     <ul class="f-ul-1">
-                        <li><i class="fa fa-angle-right"></i><a href="">About</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Gallery</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Packages</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Rentl/Hire</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/About.html">About</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Gallery.html">Gallery</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Packages.html">Packages</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Rental.html">Rentl/Hire</a></li>
                     </ul>
                     </div>
                 </div>
