--- a/Uttrakhand/Night-Mussoorie.html
+++ b/Uttrakhand/Night-Mussoorie.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogesh Mahi Tour packages and car rental services</title>
 
-    <link rel="shortcut icon" href="img/Luxury-car.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/F1.css">
+    <link rel="stylesheet" href="/css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -46,12 +46,12 @@
         <div class="col-1"></div>
         <div class="col-6">
             <ul class="menu-ul" >
-                <li> <a href="Home.html">Home</a></li>
-                <li><a href="About.html">About</li>
-                <li><a href="packages.html" class="active">Tour Packages</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li><a href="Rental.html">Rental/Hire</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li> <a href="/Home.html">Home</a></li>
+                <li><a href="/About.html">About</li>
+                <li><a href="/packages.html" class="active">Tour Packages</a></li>
+                <li><a href="/Gallery.html">Gallery</a></li>
+                <li><a href="/Rental.html">Rental/Hire</a></li>
+                <li><a href="/Contact.html">Contact</a></li>
             </ul>
            </div></div>
         </div>
@@ -59,15 +59,15 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="img/pkj-1.png" width="100%" height="550px" alt="">
+                <img class="img-chc" src="/img/pkj-1.png" width="100%" height="460px" alt="">
             <div class="sec-chc">
                 <div class="chc">
-                    <h1 class="pkj-p">PACKAGES</h1>
+                    <h1 class="smht">NIGHT MUSSOORIE TOUR PACKAGE</h1>
                 </div>
-                <div class="chc-h">
-                    <div class="div"><a href="Home.html">HOME</a></div>
+                <div class="chc-h2">
+                    <div class="div"><a href="/Home.html">HOME</a></div>
                     <div class="div"><i class="fa fa-angle-double-right"></i></div>
-                    <div class="div"><p>PACKAGES</p></div>
+                    <div class="div"><p>NIGHT MUSSOORIE TOUR PACKAGE</p></div>
                 </div>
             </div>  
             </div>
@@ -109,71 +109,73 @@
         </section>
         <section>
             <div class="dest">
-               <center><h3>DESTINATION</h3></center>
+               <center><h3>PACKAGES</h3></center>
             </div>
             <div class="explore">
-                <center><h1>Explore Top Destination</h1></center>
+                <center><h1>Night Mussoorie Tour Package</h1></center>
             </div>
-            <div class="container-fleets">
-                <div class="item-11">
-                    <div class="img-raj">
-                    <a href="Uttrakhand/Uttarakhand.html">
-                        <img class="raj-img" src="img/Uttarakhand.webp" height="250px" width="350px" alt="">
-                    <div class="Uttrakhand">
-                        Uttrakhand
-                    </div>
-                </a>
-                </div>
-                </div>
-                <div class="item-12">
-                   <a href="Rajasthan/Rajasthan.html">
-                    <img class="raj-img" src="img/Rajasthan.webp" height="250px" width="350px" alt="">
-                    <div class="Rajasthan">
-                        Rajasthan
-                    </div>
-                   </a>
-                </div>
-                <div class="item-13">
-                    <a href="Himachal/Himachal.html">
-                        <img class="raj-img" src="img/Himachal.webp"  height="250px" width="350px" alt="">
-                    <div class="Himachal">
-                        Himachal Pradesh
-                    </div>
-                    </a>
-                </div>
-                <div class="item-14">
-                   <a href="Chardham/Chardham.html">
-                    <img class="raj-img" src="img/chardham1.png" alt="" height="250px" width="350px">
-                    <div class="Char-Dham">
-                        Char Dham
-                    </div>
-                   </a>
-                </div>
-                <div class="item-15">
-                    <a href="Golden/Golden.html">
-                        <img class="raj-img" src="img/Golden" alt="" height="250px" width="350px">
-                    <div class="Golden">
-                        Golden Triangle
-                    </div>
-                    </a>
-                </div>
-                <div class="item-16">
-                    <a href="Kashmir/Kashmir.html">
-                        <img class="raj-img" src="img/Kashmir" alt="" height="250px" width="350px">
-                    <div class="Kashmir">
-                        Kashmir
-                    </div>
-                    </a>
-                </div>
-                <div class="item-17">
-                   <a href="Kerala/Kerala.html">
-                    <img class="raj-img" src="img/KERALA.jpg" alt="" height="250px" width="350px">
-                    <div class="Kerala">
-                        Kerala
-                    </div>
-                   </a>
-                </div>
+            <div class="explore-p">
+            <center><p><i class="fa fa-calendar"></i><span> 4 days / 3 Nights</span></p></center>
             </div>
+            <div class="crdjaipur">
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                <div class="crd-jct-h3">
+                    <a href="">
+                        <h3> Day 01 : Jaipur to Mussoorie</h3>
+                    </a>
+                </div>
+                  <div class="crd-jct-p">
+                    <p>
+                        Reach Jaipur and meet a representative who will help you get transferred to Mussoorie. Upon reaching Mussoorie, check-in to the hotel and take some rest. The rest of the day can be spent indulging in leisure activities. Later in the evening, you can explore around the hotel or take a stroll across the pretty streets and landscapes of the hill station. Return back to the hotel for a delicious dinner. Overnight stay in Mussoorie.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 02 : Sightseeing in Mussoorie </h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        <p>
+                            After having a hearty breakfast, head out to explore the beautiful town of Mussoorie. Visit famous Kempty waterfalls which is 15Kms approx. from Mussoorie.It is a popular tourist point in Mussoorie. You can also visit Cloud Ends (at your own cost) which is 7Kms approx. from Mussoorie. It is the highest point of Mussoorie offering an awesome view to tourists. Have lunch (at your own cost) and visit Camels Back Road which is around 3Kms where rocks are shaped like a hump of camel at the end of the road. Later visit Gun Hill Point which is the second highest point in Mussoorie. You can also enjoy the view through a cable car at your own cost. It offers a complete view of Mussoorie. In the evening visit Gun hill road and mall road for shopping. Return back to your hotel for dinner. Overnight stay in Mussoorie.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 03 : Mussoorie to Dhanaulti and Kanatal</h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        Wake up early morning in the laps of mountains. Enjoy a delicious morning breakfast and get started for the day. Head out for the sightseeing tour to Dhanaulti Visit some of the famous places like Surkanda Devi Temple, Kaudia Forest and Chamba. Visit Eco Park of Dhanaulti which features a plethora of flora as well as the native Deodar, Oak & Rhododendron trees, also housing endangered birds adding to its natural beauty. The park is also a stellar destination for fun hikes and treks filling your lungs with fresh crisp air and providing you with amazing views of Doon Valley and the Himalayas. While visiting Kanatal enjoy adventure activities like Zip line, Sky bridge and valley crossing(on extra cost). Return back to the hotel later in the evening. Overnight stay at the hotel in Dhanaulti.
+                    </div>
+                   
+                </div>
+                <div class="col-1"></div>
+                <div class="col-1"></div>
+                <div class="col-8 crd-jct">
+                    <div class="crd-jct-h3">
+                        <a href="">
+                            <h3> Day 04 : Dhanaulti to Jaipur</h3>
+                        </a>
+                    </div>
+                    <div class="crd-jct-p">
+                        Wake up in the morning, enjoy a hearty breakfast and prepare for departure. Check-out from your hotel and bid adieu to the hill station. Conclude the tour as you reach your destination in Jaipur with bag full of beautiful memories.
+                    </div>
+                </div>
+                <div class="col-1"></div>
+                
+            </div>
+        </div>
+        <button type="submit" class="button-jct"><a class="jct-btn" href="/Contact.html"> Enquiry Now</a></button>
+    </div>
         </section>
         <footer>
             <div class="footer">
@@ -206,10 +208,10 @@
                         <h3>Our Services</h3>
                     </div>
                     <ul class="f-ul-1">
-                        <li><i class="fa fa-angle-right"></i><a href="">About</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Gallery</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Packages</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Rentl/Hire</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/About.html">About</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Gallery.html">Gallery</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Packages.html">Packages</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="/Rental.html">Rentl/Hire</a></li>
                     </ul>
                     </div>
                 </div>
