--- a/Rajasthan/Rajashan-A-P-J.html
+++ b/Rajasthan/Rajashan-A-P-J.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="/css/F1.css">
+    <link rel="stylesheet" href="../css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -48,7 +48,7 @@
             <ul class="menu-ul" >
                 <li> <a href="/Home.html">Home</a></li>
                 <li><a href="/About.html">About</li>
-                <li><a href="/packages.html" class="active">Tour Packages</a></li>
+                <li><a href="/Packages.html" class="active">Tour Packages</a></li>
                 <li><a href="/Gallery.html">Gallery</a></li>
                 <li><a href="/Rental.html">Rental/Hire</a></li>
                 <li><a href="/Contact.html">Contact</a></li>
