--- a/Rajasthan/Green-Rajasthan.html
+++ b/Rajasthan/Green-Rajasthan.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="/css/F1.css">
+    <link rel="stylesheet" href="../css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
