--- a/Rajasthan/Unseen-rajasthan.html
+++ b/Rajasthan/Unseen-rajasthan.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogesh Mahi Tour packages and car rental services</title>
 
-    <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="/css/F1.css">
+    <link rel="stylesheet" href="../css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
