--- a/About.html
+++ b/About.html
@@ -48,7 +48,7 @@
             <ul class="menu-ul" >
                 <li> <a href="Home.html">Home</a></li>
                 <li><a href="About.html" class="active">About</li>
-                <li><a href="packages.html">Tour Packages</a></li>
+                <li><a href="Packages.html">Tour Packages</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
                 <li><a href="Rental.html">Rental/Hire</a></li>
                 <li><a href="Contact.html">Contact</a></li>
