--- a/Rajasthan/Jaipur-Agra.html
+++ b/Rajasthan/Jaipur-Agra.html
@@ -59,7 +59,7 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="/img/pkj-1.png" width="100%" height="460px" alt="">
+                <img class="img-chc" src="../img/pkj-1.png" width="100%" height="460px" alt="">
             <div class="sec-chc">
                 <div class="chc">
                     <h1 class="jat">JAIPUR - AGRA TOUR</h1>
