--- a/Rajasthan/Royal-Rajasthan.html
+++ b/Rajasthan/Royal-Rajasthan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogesh Mahi Tour packages and car rental services</title>
 
-    <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Luxury-car.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../css/F1.css">
 
