--- a/Contact.html
+++ b/Contact.html
@@ -45,7 +45,7 @@
             <ul class="menu-ul" >
                 <li> <a href="Home.html">Home</a></li>
                 <li><a href="About.html">About</li>
-                <li><a href="packages.html">Tour Packages</a></li>
+                <li><a href="Packages.html">Tour Packages</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
                 <li><a href="Rental.html">Rental/Hire</a></li>
                 <li><a href="Contact.html" class="active">Contact</a></li>
