--- a/Gallery.html
+++ b/Gallery.html
@@ -48,7 +48,7 @@
             <ul class="menu-ul" >
                 <li> <a href="Home.html">Home</a></li>
                 <li><a href="About.html">About</li>
-                <li><a href="packages.html">Tour Packages</a></li>
+                <li><a href="Packages.html">Tour Packages</a></li>
                 <li><a href="Gallery.html" class="active">Gallery</a></li>
                 <li><a href="Rental.html">Rental/Hire</a></li>
                 <li><a href="Contact.html">Contact</a></li>
@@ -285,10 +285,10 @@
                         <h3>Our Services</h3>
                     </div>
                     <ul class="f-ul-1">
-                        <li><i class="fa fa-angle-right"></i><a href="">About</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Gallery</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Packages</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="">Rentl/Hire</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="About.html">About</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="Gallery.html">Gallery</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="Packages.html">Packages</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="Rental.html">Rentl/Hire</a></li>
                     </ul>
                     </div>
                 </div>
