--- a/Home.html
+++ b/Home.html
@@ -383,10 +383,10 @@
                 <h3>Our Services</h3>
             </div>
             <ul class="f-ul-1">
-                <li><i class="fa fa-angle-right"></i><a href="">About</a></li>
-                <li><i class="fa fa-angle-right"></i><a href="">Gallery</a></li>
-                <li><i class="fa fa-angle-right"></i><a href="">Packages</a></li>
-                <li><i class="fa fa-angle-right"></i><a href="">Rentl/Hire</a></li>
+                <li><i class="fa fa-angle-right"></i><a href="About.html">About</a></li>
+                <li><i class="fa fa-angle-right"></i><a href="Gallery.html">Gallery</a></li>
+                <li><i class="fa fa-angle-right"></i><a href="Packages.html">Packages</a></li>
+                <li><i class="fa fa-angle-right"></i><a href="Rental.html">Rentl/Hire</a></li>
             </ul>
             </div>
         </div>
