--- a/Himachal/Himachal.html
+++ b/Himachal/Himachal.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogesh Mahi Tour packages and car rental services</title>
 
-    <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="/css/F1.css">
+    <link rel="stylesheet" href="../css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -46,12 +46,12 @@
         <div class="col-1"></div>
         <div class="col-6">
             <ul class="menu-ul" >
-                <li> <a href="/Home.html">Home</a></li>
-                <li><a href="/About.html">About</li>
-                <li><a href="/packages.html" class="active">Tour Packages</a></li>
-                <li><a href="/Gallery.html">Gallery</a></li>
-                <li><a href="/Rental.html">Rental/Hire</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li> <a href="../Home.html">Home</a></li>
+                <li><a href="../About.html">About</li>
+                <li><a href="../Packages.html" class="active">Tour Packages</a></li>
+                <li><a href="../Gallery.html">Gallery</a></li>
+                <li><a href="../Rental.html">Rental/Hire</a></li>
+                <li><a href="../Contact.html">Contact</a></li>
             </ul>
            </div></div>
         </div>
@@ -59,13 +59,13 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="/img/pkj-1.png" width="100%" height="550px" alt="">
+                <img class="img-chc" src="../img/pkj-1.png" width="100%" height="550px" alt="">
             <div class="sec-chc">
                 <div class="chc">
                     <h1 class="him-p">HIMACHAL PRADESH</h1>
                 </div>
                 <div class="chc-h">
-                    <div class="div"><a href="/Home.html">HOME</a></div>
+                    <div class="div"><a href="../Home.html">HOME</a></div>
                     <div class="div"><i class="fa fa-angle-double-right"></i></div>
                     <div class="div"><p>HIMACHAL PRADESH</p></div>
                 </div>
@@ -118,7 +118,7 @@
                 <div class="item-11">
                     <a href="Shangarh.html">
                         <div class="img-raj">
-                            <img class="raj-img" src="/img/Himachal/shangarh.jpg" height="250px" width="350px" alt="">
+                            <img class="raj-img" src="../img/Himachal/shangarh.jpg" height="250px" width="350px" alt="">
                             <div class="Rajasthan">
                                 Shangarh Jidhi Tour Package
                                 
@@ -128,7 +128,7 @@
                 </div>
                 <div class="item-12">
                     <a href="Manali-g.html" target="_blank">
-                        <img class="raj-img" src="/img/Himachal/manali.jpg" height="250px" width="350px" alt="">
+                        <img class="raj-img" src="../img/Himachal/manali.jpg" height="250px" width="350px" alt="">
                     <div class="Rajasthan">
                         Manali Group Tour
                     </div>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="item-13">
                     <a href="Simla-Manali.html" target="_blank">
-                        <img class="raj-img" src="/img/Himachal/shimla.webp"  height="250px" width="350px" alt="">
+                        <img class="raj-img" src="../img/Himachal/shimla.webp"  height="250px" width="350px" alt="">
                     <div class="jaipur">
                         Shimla Manali Honeymoon Tour
                         
@@ -145,7 +145,7 @@
                 </div>
                 <div class="item-14">
                    <a href="Manali-Kasol.html" target="_blank">
-                    <img class="raj-img" src="/img/Himachal/manalikasol.jpg" alt="" height="250px" width="350px">
+                    <img class="raj-img" src="../img/Himachal/manalikasol.jpg" alt="" height="250px" width="350px">
                     <div class="jaipur">
                         Manali Kasol Tour Package From Delhi
                     </div>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="item-15">
                    <a href="Dharamshala.html" target="_blank">
-                    <img class="raj-img" src="/img/Himachal/dharamshala.jpg" alt="" height="250px" width="350px">
+                    <img class="raj-img" src="../img/Himachal/dharamshala.jpg" alt="" height="250px" width="350px">
                     <div class="jaipur">
                        Dharamshala Dalhousie Group Tour Package
                     </div>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="item-16">
                     <a href="Dalhousie.html" target="_blank">
-                        <img class="raj-img" src="/img/Himachal/dharamshala dalfousie.jpg" alt="" height="250px" width="350px">
+                        <img class="raj-img" src="../img/Himachal/dharamshala dalfousie.jpg" alt="" height="250px" width="350px">
                     <div class="jaipur">
                         Dharamshala Dalhousie Honeymoon Tour
                     </div>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="item-17">
                    <a href="Kullumanali.html" target="_blank">
-                    <img class="raj-img" src="/img/Himachal/kullumanali.jpg" alt="" height="250px" width="350px">
+                    <img class="raj-img" src="../img/Himachal/kullumanali.jpg" alt="" height="250px" width="350px">
                     <div class="jaipur">
                         Kullumanali Honeymoon Package From Mumbai
                     </div>
@@ -177,7 +177,7 @@
                 </div>
                 <div class="item-18">
                     <a href="Weekend-Manali.html" target="_blank">
-                        <img class="raj-img" src="/img/Himachal/weekend trip.jpg" alt="" height="250px" width="350px">
+                        <img class="raj-img" src="../img/Himachal/weekend trip.jpg" alt="" height="250px" width="350px">
                     <div class="jaipur">
                         Weekend Trip To Manali Package
                     </div>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="item-19">
                     <a href="Spiti-Valley.html" target="_blank">
-                        <img class="raj-img" src="/img/Himachal/spiti valley.jpg" alt="" height="250px" width="350px">
+                        <img class="raj-img" src="../img/Himachal/spiti valley.jpg" alt="" height="250px" width="350px">
                     <div class="jaipur">
                         Spiti Valley Tour Package From Shimla
                     </div>
@@ -225,10 +225,10 @@
                         <h3>Our Services</h3>
                     </div>
                     <ul class="f-ul-1">
-                        <li><i class="fa fa-angle-right"></i><a href="/About.html">About</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Gallery.html">Gallery</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Packages.html">Packages</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Rental.html">Rentl/Hire</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../About.html">About</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Gallery.html">Gallery</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Packages.html">Packages</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Rental.html">Rentl/Hire</a></li>
                     </ul>
                     </div>
                 </div>
