--- a/Kashmir/Kashmir.html
+++ b/Kashmir/Kashmir.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogesh Mahi Tour packages and car rental services</title>
 
-    <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Luxury-car.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="/css/F1.css">
+    <link rel="stylesheet" href="../css/F1.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -46,12 +46,12 @@
         <div class="col-1"></div>
         <div class="col-6">
             <ul class="menu-ul" >
-                <li> <a href="/Home.html">Home</a></li>
-                <li><a href="/About.html">About</li>
-                <li><a href="/packages.html" class="active">Tour Packages</a></li>
-                <li><a href="/Gallery.html">Gallery</a></li>
-                <li><a href="/Rental.html">Rental/Hire</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li> <a href="../Home.html">Home</a></li>
+                <li><a href="../About.html">About</li>
+                <li><a href="../Packages.html" class="active">Tour Packages</a></li>
+                <li><a href="../Gallery.html">Gallery</a></li>
+                <li><a href="../Rental.html">Rental/Hire</a></li>
+                <li><a href="../Contact.html">Contact</a></li>
             </ul>
            </div></div>
         </div>
@@ -59,13 +59,13 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="/img/pkj-1.png" width="100%" height="550px" alt="">
+                <img class="img-chc" src="../img/pkj-1.png" width="100%" height="550px" alt="">
             <div class="sec-chc">
                 <div class="chc">
                     <h1 class="ksm-r">KASHMIR</h1>
                 </div>
                 <div class="chc-h">
-                    <div class="div"><a href="/Home.html">HOME</a></div>
+                    <div class="div"><a href="../Home.html">HOME</a></div>
                     <div class="div"><i class="fa fa-angle-double-right"></i></div>
                     <div class="div"><p>KASHMIR</p></div>
                 </div>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="item-12">
                  <a href="Kashmir-Group.html" target="_blank">
-                    <img class="raj-img" src="/img/Kashmir-Tour/kashmir group tour.jpg" height="250px" width="350px" alt="">
+                    <img class="raj-img" src="../img/Kashmir-Tour/kashmir group tour.jpg" height="250px" width="350px" alt="">
                     <div class="k-g-t">
                         kashmir Group Tour
                     </div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="item-13">
                   <a href="Experience-Kashmir.html" target="_blank">
-                    <img class="raj-img" src="/img/Himachal/shimla.webp"  height="250px" width="350px" alt="">
+                    <img class="raj-img" src="../img/Himachal/shimla.webp"  height="250px" width="350px" alt="">
                     <div class="ek-fg">
                         Experience Kashmir - A family Getaway
                         
@@ -169,10 +169,10 @@
                         <h3>Our Services</h3>
                     </div>
                     <ul class="f-ul-1">
-                        <li><i class="fa fa-angle-right"></i><a href="/About.html">About</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Gallery.html">Gallery</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Packages.html">Packages</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Rental.html">Rentl/Hire</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../About.html">About</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Gallery.html">Gallery</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Packages.html">Packages</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Rental.html">Rentl/Hire</a></li>
                     </ul>
                     </div>
                 </div>
