--- a/Rajasthan/Green-Rajasthan.html
+++ b/Rajasthan/Green-Rajasthan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yogesh Mahi Tour packages and car rental services</title>
 
-    <link rel="shortcut icon" href="/img/Luxury-car.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Luxury-car.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../css/F1.css">
 
@@ -46,12 +46,12 @@
         <div class="col-1"></div>
         <div class="col-6">
             <ul class="menu-ul" >
-                <li> <a href="/Home.html">Home</a></li>
-                <li><a href="/About.html">About</li>
-                <li><a href="/packages.html" class="active">Tour Packages</a></li>
-                <li><a href="/Gallery.html">Gallery</a></li>
-                <li><a href="/Rental.html">Rental/Hire</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li> <a href="../Home.html">Home</a></li>
+                <li><a href="../About.html">About</li>
+                <li><a href="../Packages.html" class="active">Tour Packages</a></li>
+                <li><a href="../Gallery.html">Gallery</a></li>
+                <li><a href="../Rental.html">Rental/Hire</a></li>
+                <li><a href="../Contact.html">Contact</a></li>
             </ul>
            </div></div>
         </div>
@@ -65,7 +65,7 @@
                     <h1 class="rtgz">RAJASTHAN TOUR GREEN ZONE</h1>
                 </div>
                 <div class="chc-h2">
-                    <div class="div"><a href="/Home.html">HOME</a></div>
+                    <div class="div"><a href="../Home.html">HOME</a></div>
                     <div class="div"><i class="fa fa-angle-double-right"></i></div>
                     <div class="div"><p>RAJASTHAN TOUR GREEN ZONE</p></div>
                 </div>
@@ -194,7 +194,7 @@
                 <div class="col-1"></div>
             </div>
         </div>
-        <button type="submit" class="button-jct"><a class="jct-btn" href="/Contact.html"> Enquiry Now</a></button>
+        <button type="submit" class="button-jct"><a class="jct-btn" href="../Contact.html"> Enquiry Now</a></button>
     </div>
         </section>
         <footer>
@@ -228,10 +228,10 @@
                         <h3>Our Services</h3>
                     </div>
                     <ul class="f-ul-1">
-                        <li><i class="fa fa-angle-right"></i><a href="/About.html">About</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Gallery.html">Gallery</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Packages.html">Packages</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Rental.html">Rentl/Hire</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../About.html">About</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Gallery.html">Gallery</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Packages.html">Packages</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Rental.html">Rentl/Hire</a></li>
                     </ul>
                     </div>
                 </div>
