--- a/Rajasthan/Unseen-rajasthan.html
+++ b/Rajasthan/Unseen-rajasthan.html
@@ -46,12 +46,12 @@
         <div class="col-1"></div>
         <div class="col-6">
             <ul class="menu-ul" >
-                <li> <a href="/Home.html">Home</a></li>
-                <li><a href="/About.html">About</li>
-                <li><a href="/packages.html" class="active">Tour Packages</a></li>
-                <li><a href="/Gallery.html">Gallery</a></li>
-                <li><a href="/Rental.html">Rental/Hire</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li> <a href="../Home.html">Home</a></li>
+                <li><a href="../About.html">About</li>
+                <li><a href="../Packages.html" class="active">Tour Packages</a></li>
+                <li><a href="../Gallery.html">Gallery</a></li>
+                <li><a href="../Rental.html">Rental/Hire</a></li>
+                <li><a href="../Contact.html">Contact</a></li>
             </ul>
            </div></div>
         </div>
@@ -59,13 +59,13 @@
     <main>
         <section>
             <div class="data-chc">
-                <img class="img-chc" src="/img/pkj-1.png" width="100%" height="460px" alt="">
+                <img class="img-chc" src="../img/pkj-1.png" width="100%" height="460px" alt="">
             <div class="sec-chc">
                 <div class="chc">
                     <h1 class="urt">UNSEEN RAJASTHAN TOUR</h1>
                 </div>
                 <div class="chc-h2">
-                    <div class="div"><a href="/Home.html">HOME</a></div>
+                    <div class="div"><a href="../Home.html">HOME</a></div>
                     <div class="div"><i class="fa fa-angle-double-right"></i></div>
                     <div class="div"><p>UNSEEN RAJASTHAN TOUR</p></div>
                 </div>
@@ -209,7 +209,7 @@
                 <div class="col-1"></div>
             </div>
         </div>
-        <button type="submit" class="button-jct"><a class="jct-btn" href="/Contact.html"> Enquiry Now</a></button>
+        <button type="submit" class="button-jct"><a class="jct-btn" href="../Contact.html"> Enquiry Now</a></button>
     </div>
         </section>
         <footer>
@@ -243,10 +243,10 @@
                         <h3>Our Services</h3>
                     </div>
                     <ul class="f-ul-1">
-                        <li><i class="fa fa-angle-right"></i><a href="/About.html">About</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Gallery.html">Gallery</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Packages.html">Packages</a></li>
-                        <li><i class="fa fa-angle-right"></i><a href="/Rental.html">Rentl/Hire</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../About.html">About</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Gallery.html">Gallery</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Packages.html">Packages</a></li>
+                        <li><i class="fa fa-angle-right"></i><a href="../Rental.html">Rentl/Hire</a></li>
                     </ul>
                     </div>
                 </div>
